Fixing spacing from social icons on home banner.

--- a/_scss/bbg/_home.scss
+++ b/_scss/bbg/_home.scss
@@ -53,7 +53,6 @@
 		}
 		position: absolute;
 			bottom:0;
-		width: 100%;
 
 		.bbg-banner-site-title{
 			color: #FFF;
