--- a/style-human.css
+++ b/style-human.css
@@ -3359,7 +3359,6 @@ fieldset {
   padding-bottom: 1.5rem;
   position: absolute;
   bottom: 0;
-  width: 100%;
 }
 .bbg-banner .bbg-banner-box .bbg-banner-site-title {
   color: #FFF;
